--- a/Challenge/index.html
+++ b/Challenge/index.html
@@ -7,15 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Bellybutton Biodiversity</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
+      <div class="jumbotron">
+        <h1 style="text-align: center;">Belly Button Biodiversity Dashboard</h1>
+        <p style="text-align: center;">Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
     <div class="row">
@@ -23,7 +24,7 @@
         <div class="well">
           <h5>Test Subject ID No.:</h5>
           <!-- <select id="selDataset"></select> -->
-          <select id="selDataset" onchange="optionChanged(this.value)"></select>
+          <select id="selDataset" onchange="optionChanged(this.value)" style="text-align: center"></select>
         </div>
         <div class="panel panel-primary">
           <div class="panel-heading">
@@ -34,21 +35,25 @@
       </div>
       <div class="col-md-5">
         <div id="bar"></div>
+        <p style="text-align: center;">This charts illustrates the ten top bacteria cultures</p>
       </div>
       <div class="col-md-5">
         <div id="gauge"></div>
+        <p style="text-align: center;">This figure show the number of times the belly is washed in a week</p>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
-        <div id="bubble"></div>
-      </div>
+
+        <div class="col-md-12">
+          <div id="bubble"></div>
+          <p style="text-align: center;">The bacteria cultures per sample and thier number</p>
+        </div>
     </div>
   </div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
-  <script src="BellyButton_bar_chart_starter_code.js"></script>
+  <script src="charts.js"></script>
 
 </body>
 
